add open profile